--- a/survey-form/survey.css
+++ b/survey-form/survey.css
@@ -8,10 +8,15 @@ body {
   background: url("https://consumer-img.huawei.com/content/dam/huawei-cbg-site/common/mkt/pdp/phones/p30-pro/img/camera-intro/pic_idDesign_md@2x.jpg")
     top right no-repeat;
   background-size: cover;
+  position: relative;
 }
 
 section {
-  margin: auto;
+  margin: 0 auto;
+  position: absolute;
+  object-position: center top;
+  width: 100%;
+  transition: all 5s ease-out 0s;
 }
 
 .text {
