--- a/survey-form/survey.css
+++ b/survey-form/survey.css
@@ -4,7 +4,7 @@ body {
 
 #main {
   width: 100%;
-  height: 100vh;
+  height: 200vh;
   background: url("https://consumer-img.huawei.com/content/dam/huawei-cbg-site/common/mkt/pdp/phones/p30-pro/img/camera-intro/pic_idDesign_md@2x.jpg")
     top right no-repeat;
   background-size: cover;
@@ -53,7 +53,7 @@ p {
   margin: 30px 0;
 }
 
-.field-span {
+.field-label {
   display: block;
   text-align: left;
   margin-left: 20px;
@@ -164,5 +164,19 @@ p {
   border-radius: 5px;
   font-size: larger;
   font-family: Verdana, Geneva, Tahoma;
-  margin-left: 10px;
+  margin-left: 15px;
+}
+
+#submit {
+  display: block;
+  width: 94%;
+  padding: 0.75rem;
+  border-radius: 5px;
+  cursor: pointer;
+  background: rgb(37, 180, 92);
+  margin-bottom: 50px;
+  margin-left: 15px;
+  color: white;
+  font-size: larger;
+  font-family: Verdana, Geneva, Tahoma;
 }
