--- a/landing-page/landing.css
+++ b/landing-page/landing.css
@@ -46,3 +46,86 @@ body {
 li {
   list-style: none;
 }
+
+#hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 200px;
+  margin-top: 70px;
+}
+
+#hero h2 {
+  margin-bottom: 20px;
+}
+
+form {
+  display: block;
+}
+
+#email {
+  max-width: 280px;
+  width: 100%;
+  padding: 5px;
+}
+
+#submit {
+  max-width: 150px;
+  width: 100%;
+  height: 40px;
+  margin: 15px 0;
+  background-color: aquamarine;
+}
+
+.btn {
+  padding: 0 20px;
+  font-size: 1em;
+  font-weight: 800;
+  text-transform: uppercase;
+  cursor: pointer;
+  border-radius: 3px;
+}
+
+.container {
+  max-width: 1000px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+#features {
+  margin-top: 40px;
+}
+
+.grid {
+  display: flex;
+}
+
+#features .icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 130px;
+  width: 20vw;
+  color: aquamarine;
+}
+
+#features .desc {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 130px;
+  width: 80vw;
+  padding: 5px;
+}
+
+h2 {
+  font-size: 2em;
+  padding-bottom: 10px;
+}
+
+p {
+  display: block;
+  font-size: large;
+}
