--- a/landing-page/landing.css
+++ b/landing-page/landing.css
@@ -196,3 +196,31 @@ p {
   cursor: pointer;
   margin-bottom: 20px;
 }
+
+footer {
+  margin-top: 30px;
+  background-color: bisque;
+  padding: 20px;
+}
+
+footer > ul {
+  display: flex;
+  justify-content: flex-end;
+}
+
+footer > ul > li {
+  padding: 0 10px;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+footer > span {
+  margin-top: 5px;
+  display: flex;
+  justify-content: flex-end;
+  font-size: 0.9em;
+  color: rgb(51, 40, 40);
+}
