--- a/technical-documentation-page/documentation.css
+++ b/technical-documentation-page/documentation.css
@@ -94,3 +94,19 @@ code {
   border-radius: 5px;
   font-family: monospace;
 }
+
+ul ul {
+  list-style-type: circle;
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+}
+
+a {
+  color: blue;
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+@media (min-width: 830px) body {
+  min-height: 100vh;
+}
