--- a/technical-documentation-page/documentation.css
+++ b/technical-documentation-page/documentation.css
@@ -14,6 +14,46 @@ html {
 body {
   position: relative;
   height: 100vh;
+  display: block;
+  margin: 8px;
+}
+
+html,
+body {
+  min-width: 290px;
+  color: rgb(85, 76, 76);
+  font-family: "Open Sans", sans-serif;
+  line-height: 1.5;
+}
+
+#navbar {
+  position: fixed;
+  min-width: 290px;
+  top: 0px;
+  left: 0px;
+  width: 300px;
+  height: 100%;
+  border-right: solid;
+  border-color: rgba(0, 22, 22, 0.4);
+}
+
+nav {
+  display: block;
+}
+
+#navbar a {
+  display: block;
+  padding: 10px 30px;
+  color: rgb(99, 95, 95);
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#navbar li {
+  border-top: 1px solid;
+  list-style: none;
+  position: relative;
+  width: 100%;
 }
 
 .fullpage {
