--- a/landing2/landing2/landing2.css
+++ b/landing2/landing2/landing2.css
@@ -75,3 +75,10 @@ footer {
 .address {
   margin-bottom: 5px;
 }
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -25px;
+}
