--- a/css-color-markers/css-color-markers/styles.css
+++ b/css-color-markers/css-color-markers/styles.css
@@ -24,6 +24,18 @@ h1 {
   background-color: rgb(255, 0, 255);
 }
 
+.four {
+  background-color: rgb(0, 255, 127);
+}
+
+.five {
+  background-color: rgb(127, 0, 255);
+}
+
+.six {
+  background-color: rgba(228, 17, 95, 0.477);
+}
+
 .container {
   padding-top: 10px;
   padding-bottom: 10px;
