--- a/css-color-markers/css-color-markers/styles.css
+++ b/css-color-markers/css-color-markers/styles.css
@@ -4,6 +4,7 @@ body {
 
 h1 {
   text-align: center;
+  background-color: rgb(91, 233, 233);
 }
 
 .marker {
@@ -13,11 +14,16 @@ h1 {
 }
 
 .one {
-  background-color: rgb(255, 255, 0);
+  background: linear-gradient(90deg, rgb(255, 255, 0), rgb(0, 0, 200));
 }
 
 .two {
-  background-color: rgb(0, 255, 255);
+  background: linear-gradient(
+    90deg,
+    rgb(0, 255, 255),
+    rgb(39, 122, 122),
+    rgb(200, 100, 192)
+  );
 }
 
 .three {
@@ -33,7 +39,7 @@ h1 {
 }
 
 .six {
-  background-color: rgba(228, 17, 95, 0.477);
+  background-color: rgb(255, 0, 127);
 }
 
 .container {
