--- a/css-color-markers/css-color-markers/styles.css
+++ b/css-color-markers/css-color-markers/styles.css
@@ -27,7 +27,7 @@ h1 {
 }
 
 .three {
-  background-color: rgb(255, 0, 255);
+  background: linear-gradient(180deg, rgb(255, 0, 255), #e894da, #c937b1);
 }
 
 .four {
