--- a/registration-form/styles.css
+++ b/registration-form/styles.css
@@ -5,3 +5,17 @@ body {
   background-color: #1b1b32;
   color: #f5f6f7;
 }
+
+label {
+  display: block;
+  margin: 0.5rem 0;
+  font-size: 20px;
+}
+
+h1 {
+  font-size: 40px;
+}
+
+p {
+  font-size: 30px;
+}
