--- a/registration-form/styles.css
+++ b/registration-form/styles.css
@@ -41,3 +41,25 @@ fieldset {
   padding: 2rem 0;
   border-bottom: 3px solid #3b3b4f;
 }
+
+fieldset:last-of-type {
+  border-bottom: none;
+}
+
+input,
+textarea,
+select {
+  width: 100%;
+  margin-top: 10px;
+  margin-left: 0;
+  margin-right: 0;
+  margin-bottom: 0;
+}
+
+.inline {
+  width: unset;
+  margin-right: 0.5em;
+  margin-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+}
