--- a/registration-form/styles.css
+++ b/registration-form/styles.css
@@ -62,4 +62,11 @@ select {
   margin-left: 0;
   margin-top: 0;
   margin-bottom: 0;
+  vertical-align: middle;
+}
+
+input,
+textarea {
+  background-color: #0a0a23;
+  border: 1px solid #0a0a23;
 }
