--- a/registration-form/styles.css
+++ b/registration-form/styles.css
@@ -69,4 +69,17 @@ input,
 textarea {
   background-color: #0a0a23;
   border: 1px solid #0a0a23;
+  color: #ffffff;
+  min-height: 2em;
+}
+
+input[type="submit"] {
+  display: block;
+  width: 60%;
+  min-width: 300px;
+  margin: 0 auto;
+  height: 2em;
+  font-size: 1.1rem;
+  background-color: #3b3b4f;
+  border-color: white;
 }
