--- a/registration-form/styles.css
+++ b/registration-form/styles.css
@@ -34,6 +34,7 @@ form {
   max-width: 600px;
   min-width: 300px;
   width: 60vw;
+  padding-bottom: 2em;
 }
 
 fieldset {
@@ -77,9 +78,13 @@ input[type="submit"] {
   display: block;
   width: 60%;
   min-width: 300px;
-  margin: 0 auto;
+  margin: 1em auto 1em auto;
   height: 2em;
   font-size: 1.1rem;
   background-color: #3b3b4f;
   border-color: white;
+}
+
+input[type="file"] {
+  padding: 1px 2px;
 }
